feat: support Minecraft 1.21.11 (#1)