@@ -9,11 +9,11 @@ buildscript {
 }
 
 plugins {
-    id 'net.fabricmc.fabric-loom' version "${loom_version}"
+    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
     id 'maven-publish'
 }
 
-project.ext.lwjglVersion = "3.4.1"
+project.ext.lwjglVersion = "3.3.3"
 version = project.mod_version
 group = project.maven_group
 
@@ -24,12 +24,12 @@ base {
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
-    maven { url "https://api.modrinth.com/maven" }
-    maven { url "https://maven.lenni0451.net/everything" }
-    maven { url "https://repo.viaversion.com/" }
-    maven { url "https://repo.opencollab.dev/maven-snapshots/" }
-    maven { url "https://maven.terraformersmc.com/" }
-    maven { url "https://maven.florianreuth.de/snapshots" }
+    maven { url 'https://api.modrinth.com/maven' }
+    maven { url 'https://maven.lenni0451.net/everything' }
+    maven { url 'https://repo.viaversion.com/' }
+    maven { url 'https://repo.opencollab.dev/maven-snapshots/' }
+    maven { url 'https://maven.terraformersmc.com/' }
+    maven { url 'https://maven.florianreuth.de/snapshots' }
 }
 
 configurations {
@@ -41,7 +41,7 @@ loom {
 
     runs {
         configureEach {
-            vmArgs '--enable-native-access=ALL-UNNAMED', '--sun-misc-unsafe-memory-access=allow'
+            vmArgs '--enable-native-access=ALL-UNNAMED'
         }
     }
 }
@@ -51,7 +51,6 @@ sourceSets {
         java {
             exclude 'com/soarclient/libraries/browser/**'
             exclude 'com/soarclient/management/mod/impl/hud/WebBrowserMod.java'
-            exclude 'com/soarclient/mixin/mixins/minecraft/entity/MixinPlayerEntity.java'
         }
         resources {
             exclude 'assets/soar/shaders/**'
@@ -61,14 +60,15 @@ sourceSets {
 
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
 
-    implementation "com.viaversion:viafabricplus-api:4.6.1"
-    implementation "com.viaversion:viafabricplus:4.6.1"
-    include "com.viaversion:viafabricplus:4.6.1"
+    modImplementation "com.viaversion:viafabricplus-api:${project.viafabricplus_version}"
+    modImplementation "com.viaversion:viafabricplus:${project.viafabricplus_version}"
+    include "com.viaversion:viafabricplus:${project.viafabricplus_version}"
 
     def bundled = [
         'com.github.ben-manes.caffeine:caffeine:3.2.3',
@@ -102,8 +102,7 @@ dependencies {
         "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-linux-arm64",
         "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-macos",
         "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-macos-arm64",
-        "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-windows",
-        "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-windows-arm64"
+        "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-windows"
     ]
 
     lwjglNfdDeps.each { dep ->
@@ -113,21 +112,21 @@ dependencies {
 }
 
 processResources {
-    inputs.property "version", project.version
+    inputs.property 'version', project.version
 
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version
+    filesMatching('fabric.mod.json') {
+        expand 'version': project.version
     }
 }
 
 tasks.withType(JavaCompile).configureEach {
-    it.options.release = 25
+    it.options.release = 21
 }
 
 java {
     withSourcesJar()
-    sourceCompatibility = JavaVersion.VERSION_25
-    targetCompatibility = JavaVersion.VERSION_25
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 /*
